# WaveOpticsBrdf

./: .gitignore  CMakeLists.txt  README.md  exrimage.cpp  exrimage.h  genBrdf.cpp  waveBrdf.cpp  waveBrdf.h
